# poe2-affix-builder

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
config/: item_mapping.json  poe2db_snapshot.json
docs/: architecture.md  contributor-workflow.md  data-contracts.md  release-checklist.md  unresolved-groups.md
docs/schema-examples/: manifest-item.json  output-item.json  snapshot.json  unresolved-diagnostics.json
result/: build_report.json  mapping_validation.json  poe2db_refresh_report.json  rebuild_mapping_report.json
result/affixes/: Abyss_Precursor_Tablet.json  Amphora_Relic.json  Amulets.json  Belts.json  Body_Armours_dex.json  Body_Armours_dex_int.json  Body_Armours_int.json  Body_Armours_str.json  Body_Armours_str_dex.json  Body_Armours_str_dex_int.json  Body_Armours_str_int.json  Boots_dex.json  Boots_dex_int.json  Boots_int.json  Boots_str.json  Boots_str_dex.json  Boots_str_int.json  Bows.json  Breach_Precursor_Tablet.json  Bucklers.json  Charms.json  Claws.json  Coffer_Relic.json  Crossbows.json  Daggers.json  Delirium_Precursor_Tablet.json  Emerald.json  Expedition_Precursor_Tablet.json  Flails.json  Foci.json  Gloves_dex.json  Gloves_dex_int.json  Gloves_int.json  Gloves_str.json  Gloves_str_dex.json  Gloves_str_int.json  Helmets_dex.json  Helmets_dex_int.json  Helmets_int.json  Helmets_str.json  (+38 more)
src/poe_affix_builder/: __init__.py  builder.py  cli.py  io_utils.py  manifest.py  normalize.py  poe2db_snapshot.py  rebuild_mapping.py  (+1 more)
tests/: test_artifact_summary.py  test_builder.py  test_cli.py  test_contracts.py  test_diagnostics.py  test_matching_service.py  test_poe2db_parsing.py  test_policies.py  test_rebuild_mapping.py  test_source.py
(+22 files in other folders)
